catkin_ws/logs/frontend/build.make.023.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:314:1: warning: multi-line comment [-Wcomment]
 //    cv::drawMatches(frame1.getGray(),frame1.getKeypoints(),frame2.getGray(),frame2.getKeypoints(), matches, \
 ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp:1:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:27: error: ‘px4_offboard’ does not name a type
  void stateCallback(const px4_offboard::CtrlState state)
                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: expected unqualified-id before ‘state’
  void stateCallback(const px4_offboard::CtrlState state)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: expected ‘)’ before ‘state’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:41: error: expected ‘;’ at end of member declaration
  void stateCallback(const px4_offboard::CtrlState state)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: ‘state’ does not name a type
  void stateCallback(const px4_offboard::CtrlState state)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp: In constructor ‘RosHandler::RosHandler()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp:18:61: error: ‘Mission’ has not been declared
  _state_sub   = _nh.subscribe("/px4_offboard/state",  10,  &Mission::stateCallback, this);
                                                             ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/RosHandler.cpp:30:2: error: ‘_is_calibrate’ was not declared in this scope
  _is_calibrate = 0;
  ^
make[2]: *** [CMakeFiles/SLAM.dir/src/RosHandler.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Mapping.h:24:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:16:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:27: error: ‘px4_offboard’ does not name a type
  void stateCallback(const px4_offboard::CtrlState state)
                           ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: expected unqualified-id before ‘state’
  void stateCallback(const px4_offboard::CtrlState state)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: expected ‘)’ before ‘state’
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:41: error: expected ‘;’ at end of member declaration
  void stateCallback(const px4_offboard::CtrlState state)
                                         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/RosHandler.h:83:51: error: ‘state’ does not name a type
  void stateCallback(const px4_offboard::CtrlState state)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp: In member function ‘void SLAM::Mapping::matchTwoFrames(const SLAM::Frame&, const SLAM::Frame&, bool&, bool&, Eigen::Isometry3d&, Eigen::Matrix<double, 6, 6>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Mapping.cpp:280:14: warning: unused variable ‘logName’ [-Wunused-variable]
  static char logName [50];
              ^
make[2]: *** [CMakeFiles/SLAM.dir/src/Mapping.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
